# rust-actix-grocery-list-api

./: .env  Cargo.toml  README.md  Settings.toml  data.db-shm  data.db-wal
migrations/: 20210819193835_initial.sql  20210819203303_new_table.sql  20210823023402_inital.down.sql  20210823023402_inital.up.sql
scripts/: add_migration.sh  migrate.sh  revert.sh  start.sh
src/: config.rs  db.rs  http_error.rs  item.rs  main.rs  model.rs  routes.rs  state.rs
src/auth/: mod.rs  models.rs  service.rs
src/item/: mod.rs  models.rs  routes.rs  tests.rs
src/user/: mod.rs  models.rs  routes.rs  service.rs  tests.rs
src/util/: db.rs  errors.rs  mod.rs  state.rs  test_util.rs
