[package]
name = "my_app"
version = "0.1.0"
authors = ["gla9931 <jarredglaser@northwesternmutual.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
sqlx = { version = "0.5", features = [ "sqlite" ] }
sqlx-cli = "0.5.6"
serde = "1.0.127"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.43"
rusqlite = { version = "*", features = ["bundled"] }
actix-rt = "2.2.0"
futures = "0.3.16"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
rust-crypto = "0.2.36"
config = "0.11.0"
serde_json = "1.0"
